Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-cayman
 title: tutorMe Android App
 description: An android application that matches students and tutors.
